--- a/examples/02-effect_modification.rmd
+++ b/examples/02-effect_modification.rmd
@@ -1,7 +1,6 @@
 ---
 title: "Example: effect modification"
-author: Dzjon Hessing
-output: github_document
+output: html_document
 ---
 
 ```{r include=F}
